# tadcc

./: .gitignore  install.sh  tadc.y
bazel_base/: bazel_base.py  bazel_parser.py
bazel_base/cpp/: BazelBuild.g4  CMakeLists.txt  attribute.cc  bazel_base.h  bazel_parser.h  example.cc  gen.sh  main.cc  parse.cc  test_arch.cc  value.cc
bazel_base/cpp/bazel_base/: 128002.bodies  128002.diagram  128002_2.b  128898.bodies  129026.bodies  129154.bodies  129154_2.b  129282.bodies  129410.bodies  129538.bodies  134530.diagram  2.session  Com_body_4a04c90_2.cpp  Identify_body_4a05320_2.cpp  SingleValue_body_4a04a98_2.cpp  Value_body_4a049f0_2.cpp  _release_body_6b4fcc0_2.cpp  _release_body_6b4fd68_2.cpp  append_body_6b4f390_2.cpp  bazel_base.prj  cpp_includes  erase_body_4a06388_2.cpp  erase_body_6b4f2e8_2.cpp  generation_settings  get_name_body_4a05470_2.cpp  instance_body_4979f50_2.cpp  set_name_body_4a05320_2.cpp  set_value_body_6b4f828_2.cpp  stringify_body_4a05e48_2.cpp  stringify_body_6b4e1d8_2.cpp
bazel_base/cpp/bazel_base/bazel_base/include/: Appendeble.h  Argument.h  BazelBuild.h  CallMeta.h  Com.h  ComContext.h  Erasible.h  Identify.h  MultiValue.h  Namiable.h  Removible.h  SingleValue.h  Stringify.h  Treify.h  Value.h
bazel_base/cpp/bazel_base/bazel_base/src/: Appendeble.cpp  Argument.cpp  BazelBuild.cpp  CallMeta.cpp  Com.cpp  ComContext.cpp  Erasible.cpp  Identify.cpp  MultiValue.cpp  Namiable.cpp  Removible.cpp  SingleValue.cpp  Stringify.cpp  Treify.cpp  Value.cpp
bazel_base/flex_bison/: bazel_lex.l  bazel_parse.y
bazel_base/java_export/: Main.java
bazel_base/py2/: BazelBuild.g4  bazel_base.py  example.BUILD  example.py  main.py  make.sh  test.BUILD
bazel_base/py3/: BazelBuild.g4  bazel_base.py  bazel_parser.py  example.BUILD  example.py
bouml_plugout/C/: C.prj  cpp_includes  generation_settings  stereotypes
bouml_plugout/FileControl/: 1280.bodies  128002  128128  132738.bodies  134530  135168.bodies  143488.bodies  149632.bodies  149888.bodies  156290.bodies  2048.bodies  256  3200.bodies  384  512  5248.bodies  641  8833.bodies  9217.bodies  FileControl.prj  generation_settings
bouml_plugout/GlobalChange/: 128002  128128  1408.bodies  143104.bodies  143362.bodies  143490.bodies  144896.bodies  147202.bodies  148992.bodies  149248.bodies  149504.bodies  149632.bodies  2048.bodies  256  3200.bodies  3456.bodies  384  4736.bodies  4992.bodies  512  5248.bodies  641  7041.bodies  7169.bodies  7681.bodies  8193.bodies  8449.bodies  9089.bodies  9217.bodies  9345.bodies  (+2 more)
cpp_cc/: AST.h  README.md  tadc.l  tadc.y
cpp_parser/: AST.h  main.cc  tadc.y
include/: bin_tree.hpp  comp_geometry.hpp  cybernetics.hpp  http_parse.hpp  numeric_package.hpp  pthreads_util.hpp  socket_package.hpp  string_alg.h  string_alg.tcc  tadcc.hpp  threads_util.h  threads_util.tcc  trait.hpp  version.hpp
tad_script_parser/: example.tad
test/: Makefile  string_alg.test.cc  tadcc_threads_pool.test.cc  tadcc_version.test.cc
(+691 files in other folders)
